fixed the css to make sure everything was aligned in the middle, also changed font color, size, and style.

--- a/style.css
+++ b/style.css
@@ -180,9 +180,12 @@ ul {
 
 .section3 {
     display: flex;
+    flex-direction: column;
     background: rgb(202, 202, 202);
     justify-content: center;
-    height: 40%;
+    align-content: center;
+
+    padding: 150px;
 
 
 }
@@ -190,5 +193,31 @@ ul {
 .box3 {
 
     display: flex;
-    flex: 1;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    max-width: 800px; 
+    align-self: center;
+    
+    
+}
+
+.quote {
+    display: flex;
+    font-size: 36px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-style: italic;
+   font-weight: lighter;
+   color: #404854;
+}
+
+.speaker {
+    display: flex;
+    font-size: 24px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    align-self: flex-end;
+    color:rgba(34, 33, 33, 0.898)
+    
 }
